updated quotes and removed unneeded files

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Bernitt!",
+  "name": "Prodogtive",
   "version": "1.0",
   "description": "A great tool to help you focus",
   "content_scripts": [
